GitVersion1/objects/Expense__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Show-Sunglo 551741</fullName>
                </value>
                <value>
                    <fullName>Go To Market 555747</fullName>
                </value>
                <value>
                    <fullName>US Sonya Sales 555850</fullName>
                </value>
                <value>
                    <fullName>US Baxter Sales 555855</fullName>
                </value>
                <value>
                    <fullName>Beef Sales 555861</fullName>
                </value>
                <value>
                    <fullName>Commercial Marketing 555810</fullName>
                </value>
                <value>
                    <fullName>Tractor Supply 551746</fullName>
                </value>
                <value>
                    <fullName>Midstates 551748</fullName>
                </value>
                <value>
                    <fullName>SSC Marketing 561810</fullName>
                </value>
                <value>
                    <fullName>Show/Pet Sales 555901</fullName>
                </value>
                <value>
                    <fullName>Innovation/NPSS 555800</fullName>
                </value>
                <value>
                    <fullName>MarComms 551745</fullName>
                </value>
                <value>
                    <fullName>Dairy Sales 555863</fullName>
                </value>
                <value>
                    <fullName>Channel Sponsor 555903</fullName>
                    <isActive>false</isActive>
                    <label>Channel Sponsor 555903</label>
                </value>
                <value>
                    <fullName>Channel Sponsorships cost center 555903</fullName>
                    <isActive>false</isActive>
                    <label>Channel Sponsorships cost center 555903</label>
                </value>
                <value>
                    <fullName>Equine 551742</fullName>
                    <isActive>false</isActive>
                    <label>Equine 551742</label>
                </value>
                <value>
                    <fullName>Go To Market</fullName>
                    <isActive>false</isActive>
                    <label>Go To Market</label>
                </value>
                <value>
                    <fullName>Innovation 555850</fullName>
                    <isActive>false</isActive>
                    <label>Innovation 555850</label>
                </value>
                <value>
                    <fullName>Pet 551755</fullName>
                    <isActive>false</isActive>
                    <label>Pet 551755</label>
                </value>
                <value>
                    <fullName>Poultry 551744</fullName>
                    <isActive>false</isActive>
                    <label>Poultry 551744</label>
                </value>
                <value>
                    <fullName>US Noah Feedlot Sales 555860</fullName>
                    <isActive>false</isActive>
                    <label>US Noah Feedlot Sales 555860</label>
                </value>
                <value>
                    <fullName>Wildlife 551743</fullName>
                    <isActive>false</isActive>
                    <label>Wildlife 551743</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>CCMAP-132</description>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <formula>Project_Group_MD__r.Account__r.Name</formula>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Group_MD__c</fullName>
        <label>Project Group</label>
        <referenceTo>Project_Group__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.Project_Group__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project_Group_MD__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tactic_Code__c</fullName>
        <label>Tactic Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cost_Center__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National Tradeshows 640101.118</fullName>
                </value>
                <value>
                    <fullName>National Sponsorships 640101.150</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Business Builder 640101.13</fullName>
                </value>
                <value>
                    <fullName>Stock Print - Imagine 640101.140</fullName>
                </value>
                <value>
                    <fullName>Stock Wearable - Staples 640101.151</fullName>
                </value>
                <value>
                    <fullName>Custom Wearables 640101.290</fullName>
                </value>
                <value>
                    <fullName>Custom Projects 640101.201</fullName>
                </value>
                <value>
                    <fullName>Channel Specific Promo 640101.204</fullName>
                </value>
                <value>
                    <fullName>Aluminum Signage 640101.153</fullName>
                </value>
                <value>
                    <fullName>Dealer/Regional Sales Mtgs 640101.208</fullName>
                </value>
                <value>
                    <fullName>Customer Expense (club rewards, dealer events, etc) 640101.200</fullName>
                </value>
                <value>
                    <fullName>Regional Tradeshows 640101.260</fullName>
                </value>
                <value>
                    <fullName>Customer tradeshow 640101.261</fullName>
                </value>
                <value>
                    <fullName>Adhoc sponsorships 640101.250</fullName>
                </value>
                <value>
                    <fullName>Channel Sponsorship 640101.149</fullName>
                </value>
                <value>
                    <fullName>Customer Purchased Mkg 640101.270</fullName>
                </value>
                <value>
                    <fullName>Stock Print/production 640101.140</fullName>
                </value>
                <value>
                    <fullName>Stock Wearables 640101.151</fullName>
                </value>
                <value>
                    <fullName>CFR.com description 640101.204</fullName>
                </value>
                <value>
                    <fullName>CFR.com (Limited Use) 640101.204</fullName>
                </value>
                <value>
                    <fullName>Rural King Marketing fund 640101.153</fullName>
                </value>
                <value>
                    <fullName>Print Production 640101.140</fullName>
                </value>
                <value>
                    <fullName>GEM Fund 640101.95</fullName>
                </value>
                <value>
                    <fullName>Media/PR 640101.114</fullName>
                </value>
                <value>
                    <fullName>Market Research 640101.116</fullName>
                </value>
                <value>
                    <fullName>Creative Support 640101.130</fullName>
                </value>
                <value>
                    <fullName>Account Mgmt &amp; Support 640101.135</fullName>
                </value>
                <value>
                    <fullName>Media/PR 640101.114.EQ</fullName>
                </value>
                <value>
                    <fullName>Market Research 640101.116.EQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Including_Tax__c</fullName>
        <formula>Project_Group_MD__r.Total_Including_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Including Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense</label>
    <nameField>
        <displayFormat>E-{0000000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Project_Validation</fullName>
        <active>true</active>
        <description>Selected Project should be of same Project Group.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( Project__c )), Project_Group_MD__r.Name&lt;&gt;  Project__r.Project_Group__r.Name )</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>Selected Project should be of same Project Group.</errorMessage>
    </validationRules>
</CustomObject>